# scrapy-mattermostbot

./: LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
scrapymattermostbot/: extensions.py
